--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li>OGTS 121 - Physics: Mechnics</li>
     </ul>
 
-    <h1>My Classes This Quarter</h1>
+    <h1>My Favorite Movies</h1>
     <ol>
         <p><i>(I actually don't watch too many movies, so... here goes!)</i></p>
         <li>Elemental(2023) <a
